--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@babel/runtime": "^7.26.10",
     "@polar-sh/sdk": "^0.26.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
@@ -18,6 +19,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.20",
@@ -26,7 +28,7 @@
     "cmdk": "^1.0.4",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.468.0",
-    "next": "14.2.23",
+    "next": "^15.2.2",
     "next-themes": "^0.2.1",
     "prettier": "^3.3.3",
     "radix-ui": "^1.1.3",
@@ -36,13 +38,15 @@
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
     "stripe": "^17.6.0",
-    "tempo-devtools": "^2.0.94",
+    "tempo-devtools": "^2.0.95",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-import-attributes": "^7.26.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "postcss": "^8",
     "tailwind-merge": "^2",
     "tailwindcss": "^3",
