--- a/supabase/functions/payments-webhook/config.toml
+++ b/supabase/functions/payments-webhook/config.toml
@@ -1,4 +1,5 @@
 # Allow unauthenticated access to the webhook endpoint
 # This is necessary for Stripe webhooks to work
 [functions.payments-webhook]
-verify_jwt = false 
+verify_jwt = false
+path = "/stripe-webhook"
