--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "ignore-loader": "^0.1.2",
     "postcss": "^8",
     "tailwind-merge": "^2",
     "tailwindcss": "^3",
