--- a/package.json
+++ b/package.json
@@ -19,34 +19,37 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.3",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "latest",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.4",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.468.0",
-    "next": "^15.2.2",
+    "next": "^15.3.1",
     "next-themes": "^0.2.1",
     "prettier": "^3.3.3",
     "radix-ui": "^1.1.3",
-    "react": "^18",
+    "react": "^19.1.0",
     "react-day-picker": "^9.5.1",
-    "react-dom": "^18",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.2",
     "react-resizable-panels": "^2.1.7",
     "stripe": "^17.6.0",
-    "tempo-devtools": "^2.0.100",
+    "tempo-devtools": "^2.0.102",
     "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@babel/plugin-syntax-import-attributes": "^7.26.0",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "eslint": "^9.25.1",
+    "eslint-config-next": "^15.3.1",
+    "husky": "^9.1.7",
     "ignore-loader": "^0.1.2",
     "null-loader": "^4.0.1",
     "postcss": "^8",
