--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
+    "@tanstack/react-query": "^5.74.4",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
-    "embla-carousel-react": "^8.5.2",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.468.0",
     "next": "^15.3.1",
     "next-themes": "^0.2.1",
@@ -39,7 +40,8 @@
     "react-resizable-panels": "^2.1.7",
     "stripe": "^17.6.0",
     "tempo-devtools": "^2.0.102",
-    "vaul": "^1.1.2"
+    "vaul": "^1.1.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/plugin-syntax-import-attributes": "^7.26.0",
