--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,15 @@
     "paths": {
       "@/*": [
         "./src/*"
+      ],
+      "@/supabase/*": [
+        "./src/supabase/*"
+      ],
+      "@/utils/*": [
+        "./src/utils/*"
+      ],
+      "@/lib/*": [
+        "./src/lib/*"
       ]
     }
   },
