--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "vercel-build": "next build"
+    "vercel-build": "next build",
+    "postinstall": "echo 'Postinstall completed successfully'"
   },
   "dependencies": {
     "@babel/runtime": "^7.26.10",
