--- a/vercel.json
+++ b/vercel.json
@@ -27,5 +27,6 @@
       ]
     }
   ],
-  "ignoreCommand": "echo 'Ignoring Supabase Edge Functions'"
+  "ignoreCommand": "echo 'Ignoring Supabase Edge Functions'",
+  "installCommand": "npm install"
 }
